refactor code and change name/title of test objects